--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@ header{
 	padding: 2px 30px;
 }
 .container-fluid{
-	background: url('images/bannerbg.png');
+	
 }
 header>ul{
 	padding-right: 4em;
@@ -52,39 +52,146 @@ header>ul{
 
 
 }
-.skills-section h2{
+ h2{
 	font-size: 3em !important;
 	font-weight: 700;
 }
 .btntab{
 	background: white;
+	font-weight: 600;
+	padding: 0.7 0.8em;
+	margin: 0.2em;
+	font-size: 1.1em;
 
 }
 .btntab:hover{
 	background: blue;
 	color: white;
 }
-.card{
+.projects .card{
 	width: 90%;
 	margin: auto;
 	padding: 12px;
 	margin-top: 20px;
 }
-.card-title h3{
+.projects .card-title h3{
 	font-weight: 700 !important;
 	text-align: center;
 }
-.card-text{
+.projects .card-text{
 	font-size: 14px;
 }
-.card-img-top{
+.projects .card-img-top{
 	position: relative;
 }
-.card-bgoverlay{
+.projects .card-bgoverlay{
 	background: rgba(0, 0, 0, 0.5);
 	position: absolute;
 	width: 100%;
 	height: 100%;
 	top: 0.7em;
 	border-radius: 5px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	gap: 2em;
+	transition: all 1s linear;
+	
+}
+.d-none{
+	transition: 1s;
+}
+.icons{
+	border-radius: 50%;
+	padding: 0.6em;
+	display: block;
+	font-size: 2em;
+	color: white;
+	background: rgba(0, 0, 0, 0.6);
+	transition: all 0.1s linear;
+
+}
+.icons:hover{
+	font-size: 1.9em;
+	margin: 0.1em;
+	
+}
+.img-section{
+	display: flex;
+	justify-content: space-evenly;
+	align-items: center;
+	flex-wrap: wrap;
+	gap: 3em;
+
+}
+.img-section span img{
+	height: 80px;
+	width: 80px;
+
+}
+.img-section span{
+	
+	height: 120px;
+	width: 120px;
+	background: rgb(254, 244, 245);
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	border-radius: 50%;
+}
+.Hobbies{
+	justify-content: center;
+	gap: 3em;
+}
+.Hobbies .card{
+	border: none;
+	width: 300px;
+	overflow: hidden;
+}
+.Hobbies .card img{
+	border-radius: 10px;
+}
+
+.Hobbies .card .card-title h3{
+	font-weight: 700;
+	
+}
+.Hobbies .card  .card-text{
+	line-height: 25px;
+	font-size: 19px;
+	text-align: justify;
+}
+.contact-card{
+	margin: auto;
+	background: wheat;
+	width: 350px;
+	padding: 20px 40px;
+	align-items: center;
+	border-radius: 8px;
+	justify-content: start;
+	flex-wrap: nowrap;
+}
+.contact-card a{
+	text-decoration: none;
+	color: black;
+	font-size: 20px;
+}
+.contact-form span{
+	display: flex;
+	flex-direction: column;
+	flex-wrap: nowrap;
+}
+.form-control{
+	padding: 16px;
+	background: #edf2f8;
+}
+.form-control:focus{
+	background: #edf2f8;
+	border: none;
+	outline: none;
+	
+}
+.contact-form .btn{
+	width: auto;
+	margin: 30px auto;
 }
