--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ a{
 }
 
 header{
-	    background: rgba(255, 255, 255, 0.25);
+	background: rgba(255, 255, 255, 0.25);
 	width: 100%;
 	display: flex;
 	align-items: center;
@@ -38,6 +38,9 @@ header>ul{
 }
 .nav-bg{
 	justify-self: center;
+}
+.nav-link{
+	color: black;
 }
 .intro{
 	width: 50%;
